app/assets/stylesheets/collections.css.scss
.collection-editor {

  position: relative;

  table {

    table-layout: fixed;
    width: calc(100% - 1px);

    td {
      border: 5px solid black; 
    }
    tr:first-child td {
      border-top: 0;
    }
    tr td:first-child {
      border-left: 0;
    }
    tr td:last-child {
      border-right: 0;
    }

    tr {
      td {
        border: 1pt solid #aaa;
        padding: 4px;
        vertical-align: top;
        cursor: pointer;
        user-select: none;
        .sample-identifier {
          font-size: 10pt;
          overflow-x: hidden;
          max-height: 60px;
        }
      }
      .no-part {
        background: #eee;
      }
      .no-padding {
        padding: 0px !important;
      }
    }
    .index {
      background: rgb(16, 96, 158);
      color: white;
      font-weight: bold;
    }

    .choose_sample {
      width: 50%;
      outline: 2pt dashed red;
    }

  }

  .selection-box {
    position: absolute;
    outline: 2px dashed black;
    pointer-events: none;
  }

  .data-associations {
    margin: 16px;
  }

  .data-input {
    textarea {
      margin: 0px;
      border: none;
      resize: none;
      overflow: hidden;
      &:focus {
        outline: none;
      }
    }
  }

}

.collection {
  #border: 1pt solid black;
  display: inline-block;
  padding: 10px 20px 20px 10px;
}

.part {
  width: 20px;
  height: 20px;
  margin: 3px; 
  display: inline;
  float: left;
  line-height: 1;
  padding: 5px;
  font-size: 12pt;
  border-radius: 0px;
  text-align: middle;
}

.part_header {
  background: #fff;
}

.part_occupied {
  background: #444;
}

.part_empty {
  background: #ddd;
}

.part_details {
  display: none;
  border: 1pt solid #aaa;
  padding: 10px;
}

.plain {
  list-style-type: none;
  padding:0;
  margin: 10px 0 0 0;
}


.select-root {

  .select-column {

    ul {
      border-left: 1pt solid #aaa;
      height: 100%;
      li {
        width: 100%;
      }
    }

    .btn {
      margin-left: 3px;;
    }

    h1 {
      font-size: 14pt;
      text-align: left;
      letter-spacing: 0em;
    }

  }

  .select-link {
    cursor: pointer; 
    cursor: hand;
    color: #999;
    padding: 1pt 5pt 1pt 5pt;
    width: 100%;
    display: inline-block;
  }

  .selected {
     color: #000;
     background: yellow;
  }

}

.infobox {
  border: 1pt solid #aaa;
  border-radius: 5px;
  width: 100%;
  height: 120px;
  padding: 10px;
}

